--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="../public/favicon_ico.ico">
-    <link rel="icon" href="../public/favicon-png.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../public/favicon-png.png">
+    <link rel="icon" type="image/x-icon" href="/favicon_ico.ico"> <!--Desktop-->
+    <link rel="icon" href="/favicon-png.png" type="image/png"> <!--Smartphone-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-png.png"> <!--ios-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
